--- a/public/home/css/styles.css
+++ b/public/home/css/styles.css
@@ -10946,11 +10946,11 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
-  background-image: url("../assets/img/background1.jpg");
-  background-repeat: no-repeat;
+  color: #0baccc;
+  background-image: url("../assets/img/landpage.png");
+  background-repeat: repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center;
   background-size: cover;
 }
 header.masthead .masthead-subheading {
@@ -11314,3 +11314,5 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+
